bluec-tests/tests/invalid/types_void/assign_to_void_var.c
extern void v1;

int main(void) {
  v1 = (void)0;
  return 0;
}